# wikidata-pq

./: .gitignore  DESIGN.md  Justfile  README.md  ddmin_schema.py  extract_bad_rows.py  plot_language_hist.py  plot_pipeline_mem.py  process.py  pyproject.toml  run_instrumented.py
docs/journal/: 2025-01-16-01-integrate-partition-DRAFT.md  2025-01-16-02-implement-push-DRAFT.md  2025-01-16-03-implement-postcheck-DRAFT.md  2025-01-16-04-wire-state-updates-DRAFT.md  2025-01-16-05-remediate-existing-DRAFT.md  2025-01-16-06-add-source-deletion-DRAFT.md  2025-01-16-state-tracking-DRAFT.md  2025-01-16-wire-state-process-partition-9.md
leak_debugging/: repro_full_visibility.py  repro_leak.py  repro_leak_sweep.py  repro_leak_sweep_plot.py  repro_segfault.py
scripts/: calculate_chunk_sizes.py  check_transforms.py  debug_claims.py  debug_claims2.py  debug_claims3.py  debug_claims4.py  plot_file_sizes.py  plot_file_sizes_lorenz_curve.py  plot_language_hist_all.py  test_partitioning.py
scripts/blog/avoiding-cartesian-blog/: 0_view_base_df.py  1_view_cartesian_intermediate.py  2_view_dv_langs.py  3_view_divergence_point.py  4_view_final_shape.py  compare_perf.py  debug_claims_map_elems.py
scripts/debugging/: debug_aliases.py  debug_descs.py
scripts/source_size/: README.md  chunk_totals.csv  full_file_sizes.csv
src/wikidata/: claims.py  config.py  initial.py  main.py  partitioning.py  process.py  schemas.py  state.py  struct_transforms.py
src/wikidata/partitioning/: __init__.py  claims.py  core.py  transforms.py
testing_area/: demo_dataset.py  make_partitions.py
(+8 files in other folders)
