[project]
name = "wikidata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.34.3",
    "obstore>=0.7.3",
    "orjson>=3.11.1",
    "polars>=1.32.0",
    "polars-permute>=0.1.3",
    "tqdm>=4.67.1",
]

[project.scripts]
process-wikidata = "wikidata.process:main"
