[project]
name = "wikidata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.3",
    "matplotlib>=3.10.5",
    "obstore>=0.7.3",
    "orjson>=3.11.1",
    "polars>=1.32.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.scripts]
process-wikidata = "wikidata.process:main"
